--- a/loan-application/pom.xml
+++ b/loan-application/pom.xml
@@ -9,6 +9,10 @@
 	<version>1.1.0</version>
 	<name>loan-application</name>
 	<description>Loan Application Demo</description>
+	<properties>
+		<maven.compiler.source>1.6</maven.compiler.source>
+		<maven.compiler.target>1.6</maven.compiler.target>
+	</properties>
 	<!-- 
 	<properties>
 		<version>7.0.0.GA-redhat-2</version>
