--- a/loan-application/pom.xml
+++ b/loan-application/pom.xml
@@ -12,6 +12,7 @@
 	<properties>
 		<maven.compiler.source>1.6</maven.compiler.source>
 		<maven.compiler.target>1.6</maven.compiler.target>
+		<drools.version>7.25.0.Final</drools.version>
 	</properties>
 	<!-- 
 	<properties>
@@ -61,4 +62,12 @@
 			<url>http://localhost:8080/decision-central/maven2/</url>
 		</repository>
 	</repositories>
+	<dependencies>
+		<!-- add this dependency if there are Model Classes present (created by Data Modeler in the business-central) -->
+		<dependency>
+			<groupId>org.kie</groupId>
+			<artifactId>kie-api</artifactId>
+			<version>${drools.version}</version>
+		</dependency>
+	</dependencies>
 </project>
